--- a/style.css
+++ b/style.css
@@ -4,12 +4,21 @@ html{
 
 body{
 	background: #f4f4f4;
-	font-family: 'Share Tech Mono', monospace;
+	font-family: 'Finger Paint', cursive;
 }
 
+p {
+	margin:0 auto;
+	text-align: center;
+}
+
+div	{
+	padding: 0 20px 0 20px;
+}
 h1{
 	font-size: 50px;
     text-align: center;
+    letter-spacing: 5px;
 }
 
 table{
@@ -18,9 +27,44 @@ table{
 
 td{
 	text-align: center;
-	font-size: 50px;
-    width: 175px;
-    height: 175px;
+	font-size: 75px;
+    width: 160px;
+    height: 160px;
+}
+
+button {
+	text-align: center;
+	font-family: 'Finger Paint', cursive;
+	color:purple;
+	text-transform: uppercase;
+	border: none;
+	background:none;
+	height: 100%;
+	letter-spacing: 2px;
+	font-size:inherit;
+	outline: none;
+}
+
+.container {
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	text-align: center;
+    width: 80%;
+    margin: 25px auto;
+    padding: 5px;
+}
+
+#p1{
+	color: blue;
+    float: left;
+}
+
+#p2{
+	transition: all 1s;
+	-webkit-transition:all 1s;
+	-moz-transition:all 1s;
+	color: red;
+    float: right;
 }
 
 .vertical{
@@ -39,4 +83,5 @@ td{
 
 .X{
 	color: blue;
+	
 }
